--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         #mainNav .langSelectDesktop {
             margin-top: 25px;
         }
+
     </style>
 
     <!-- i18next libraries -->
@@ -279,7 +280,34 @@
         </div>
 
     </section>
-
+    <!-- Video Section -->
+    <section class="projects-section" id="videoSection" data-lang="zh">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-0 align-items-top mb-5">
+                <div class="col-12 p-2 text-center">
+                    <h2 class="mb-4">愛妮島精彩影片分享</h2>
+                    <p class="mb-5">讓我們透過這些精選影片，一同探索愛妮島的自然美景、豐富文化與令人難忘的旅遊體驗。從清澈的海水到壯麗的石灰岩懸崖，每個角落都蘊藏著令人驚嘆的故事。</p>
+                </div>
+            </div>
+            <div class="row gx-4 gy-4">
+                <div class="col-lg-4">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/7qwccPgQVy8" title="愛妮島影片" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/UdGQC2fABls" title="愛妮島影片" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/XSousWNXBRY" title="愛妮島影片" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- timeline-->
     <section class="projects-section bg-light" id="timeline"
         style="background: linear-gradient(to bottom, rgb(255 255 255 / 82%) 0%, rgb(255 255 255 / 89%) 0%),url(assets/img/wave.jpg); background-size: cover;">
@@ -1531,7 +1559,7 @@
         </div>
     </section>
 
-
+    
     <!-- CSR -->
     <section class="projects-section bg-light" id="csr">
         <div class="container px-4 px-lg-5">
@@ -1728,7 +1756,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js?v=202411041034"></script>
+    <script src="js/scripts.js?v=202411061003"></script>
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
