--- a/index.html
+++ b/index.html
@@ -1659,6 +1659,18 @@
 
                     </div>
                 </div>
+            <div class="col-lg-12 p-2">
+                <h3 data-i18n="csr.gleeClub.title">HHG Glee Club: The Sound of Music Across El Nido</h3>
+                <p data-i18n="csr.gleeClub.description1">The HHG Glee Club is an employee group within H Hospitality Group Corporation (HHG) that brings everyone together through a shared love for music. As the first hospitality choir in El Nido, the Glee Club represents the spirit of HHG employees, with members from across all our locations – Town, Lio, and Nacpan – joining to create voices of harmony.</p>
+                <p data-i18n="csr.gleeClub.description2">Making its debut on August 18, 2024, at the Inter-Hotel Basketball Friendship Game, the Glee Club opened the event by singing the national anthem, bringing pride to HHG and joy to everyone present. With 13 employee-singers representing the different parts of HHG, the Glee Club introduces sound of music to El Nido.</p>
+                <p data-i18n="csr.gleeClub.description3">More than just a choir, the HHG Glee Club is a testament to HHG's commitment to work-life balance and employee engagement. Through clubs like this, our employees find new avenues to express themselves, connect with colleagues, and take their passions into the workplace. Supported by our Human Resources group, the Glee Club strengthens our belief that HHG is more than just a job – it's a vibrant community where everyone has a voice. As the Glee Club continues to grow, they are already preparing for upcoming performances, connecting to the broader El Nido community.</p>
+                <div class="row">
+                    <div class="col-3"><img class="img-fluid" src="images/csr/music1.jpg" alt="HHG Glee Club 1"></div>
+                    <div class="col-3"><img class="img-fluid" src="images/csr/music2.jpg" alt="HHG Glee Club 2"></div>
+                    <div class="col-3"><img class="img-fluid" src="images/csr/music3.jpg" alt="HHG Glee Club 3"></div>
+                    <div class="col-3"><img class="img-fluid" src="images/csr/music4.jpg" alt="HHG Glee Club 4"></div>
+                </div>
+            </div>
             </div>
             <div class="row gx-0 align-items-top">
                 <div class="col-12 p-2 text-center">
