--- a/jboutique-hotel.html
+++ b/jboutique-hotel.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Piece Lio - H Hospitality Group" />
+    <meta property="og:title" content="JB Boutique Hotel - H Hospitality Group" />
     <meta property="og:description"
-        content="Experience luxury and tranquility at Piece Lio, a world-class beachfront resort in El Nido, Palawan." />
-    <meta property="og:url" content="https://hhospitality.group/piece-lio.html" />
+        content="Experience luxury and tranquility at JB Boutique Hotel, a world-class beachfront resort in El Nido, Palawan." />
+    <meta property="og:url" content="https://hhospitality.group/jboutique-hotel.html" />
     <meta property="og:site_name" content="H Hospitality Group" />
-    <meta property="og:image" content="https://hhospitality.group/assets/img/piece-lio-og-image.jpg" />
+    <meta property="og:image" content="https://hhospitality.group/assets/img/jboutique-hotel-og-image.jpg" />
     <meta name="format-detection" content="telephone=no">
-    <title>Piece Lio - H Hospitality Group</title>
+    <title>JB Boutique Hotel - H Hospitality Group</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico" />
     <link rel="apple-touch-icon" href="assets/favicon_io/android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" href="assets/favicon_io/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -79,7 +79,7 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/6.1.3/i18nextBrowserLanguageDetector.min.js"></script>
 
-    
+
 </head>
 
 <body id="page-top">
@@ -105,12 +105,14 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                                        <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
+                    <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="map/index.html" target="_blank"  data-i18n="nav.map">Map</a>
+                    <li class="nav-item"><a class="nav-link" href="map/index.html" target="_blank"
+                            data-i18n="nav.map">Map</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="hotel.html" data-i18n="nav.hotel">Our Hotels</a></li>
-                    <li class="nav-item"><a class="nav-link" href="investing.html" data-i18n="nav.investing">Investing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="investing.html"
+                            data-i18n="nav.investing">Investing</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#timeline"
                             data-i18n="nav.timeline">Timeline</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contact"
@@ -131,8 +133,10 @@
     <!-- Banner Section -->
     <section class="banner-section">
         <div class="container-fluid p-0">
-            <div class="banner-image" style="background-image: url('assets/img/time-J-Hostel.jpg'); height: 60vh; background-size: cover; background-position: center;">
-                <div class="banner-overlay d-flex align-items-center justify-content-center" style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
+            <div class="banner-image"
+                style="background-image: url('assets/img/time-J-Hostel.jpg'); height: 60vh; background-size: cover; background-position: center;">
+                <div class="banner-overlay d-flex align-items-center justify-content-center"
+                    style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
                     <div class="text-center text-white">
                         <h1 class="display-3 fw-bold" data-i18n="hotel.jBoutiqueHotel.name">J Boutique Hotel</h1>
                         <p class="lead" data-i18n="hotel.jBoutiqueHotel.location">El Nido Town Center, Palawan</p>
@@ -142,20 +146,27 @@
         </div>
     </section>
 
-    
+
     <!-- Hotel Introduction Section -->
     <section class="hotel-intro py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <h1 class="mb-4" data-i18n="hotel.jBoutiqueHotel.name">J Boutique Hotel</h1>
-                    <p class="lead mb-4" data-i18n="hotel.jBoutiqueHotel.description">A stylish boutique hotel in the heart of El Nido, perfect for urban explorers. Enjoy modern amenities and easy access to the town's attractions at J Boutique Hotel.</p>
+                    <p class="lead mb-4" data-i18n="hotel.jBoutiqueHotel.description">A stylish boutique hotel in the
+                        heart of El Nido, perfect for urban explorers. Enjoy modern amenities and easy access to the
+                        town's attractions at J Boutique Hotel.</p>
                     <div class="hotel-info mb-4">
                         <h5 data-i18n="hotel.info">Hotel Info</h5>
-                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.5</span></p>
-                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.jBoutiqueHotel.location">El Nido Town Center, Palawan</span></p>
-                        <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.jBoutiqueHotel.phone">+63 917 567 8901</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://jboutiquehotelelnido.com/" target="_blank">jboutiquehotelelnido.com</a></p>
+                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.5</span>
+                        </p>
+                        <p><strong data-i18n="hotel.location">Location:</strong> <span
+                                data-i18n="hotel.jBoutiqueHotel.location">El Nido Town Center, Palawan</span></p>
+                        <p><strong data-i18n="hotel.phone">Phone:</strong> <span
+                                data-i18n="hotel.jBoutiqueHotel.phone">+63 917 567 8901</span></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a
+                                href="https://jboutiquehotelelnido.com/" target="_blank">jboutiquehotelelnido.com</a>
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -165,54 +176,69 @@
                                 <img src="assets/img/time-J-Hostel.jpg" class="d-block w-100" alt="J Boutique Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jboutiquehotel/jboutiquehotel_1.jpg" class="d-block w-100" alt="J Boutique Hotel">
+                                <img src="assets/img/jboutiquehotel/jboutiquehotel_1.jpg" class="d-block w-100"
+                                    alt="J Boutique Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jboutiquehotel/jboutiquehotel_2.jpg" class="d-block w-100" alt="J Boutique Hotel">
+                                <img src="assets/img/jboutiquehotel/jboutiquehotel_2.jpg" class="d-block w-100"
+                                    alt="J Boutique Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jboutiquehotel/jboutiquehotel_3.jpg" class="d-block w-100" alt="J Boutique Hotel">
+                                <img src="assets/img/jboutiquehotel/jboutiquehotel_3.jpg" class="d-block w-100"
+                                    alt="J Boutique Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jboutiquehotel/jboutiquehotel_4.jpg" class="d-block w-100" alt="J Boutique Hotel">
+                                <img src="assets/img/jboutiquehotel/jboutiquehotel_4.jpg" class="d-block w-100"
+                                    alt="J Boutique Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jboutiquehotel/jboutiquehotel_5.jpg" class="d-block w-100" alt="J Boutique Hotel">
+                                <img src="assets/img/jboutiquehotel/jboutiquehotel_5.jpg" class="d-block w-100"
+                                    alt="J Boutique Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/jboutiquehotel/jboutiquehotel_6.jpg" class="d-block w-100" alt="J Boutique Hotel">
+                                <img src="assets/img/jboutiquehotel/jboutiquehotel_6.jpg" class="d-block w-100"
+                                    alt="J Boutique Hotel">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#jBoutiqueHotelCarousel"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.previous">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#jBoutiqueHotelCarousel"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.next">Next</span>
                         </button>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/time-J-Hostel.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="0">
+                            <img src="assets/img/time-J-Hostel.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="0">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/jboutiquehotel/jboutiquehotel_1.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="1">
+                            <img src="assets/img/jboutiquehotel/jboutiquehotel_1.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="1">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/jboutiquehotel/jboutiquehotel_2.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="2">
+                            <img src="assets/img/jboutiquehotel/jboutiquehotel_2.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="2">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/jboutiquehotel/jboutiquehotel_3.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="3">
+                            <img src="assets/img/jboutiquehotel/jboutiquehotel_3.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="3">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/jboutiquehotel/jboutiquehotel_4.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="4">
+                            <img src="assets/img/jboutiquehotel/jboutiquehotel_4.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="4">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/jboutiquehotel/jboutiquehotel_5.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="5">
+                            <img src="assets/img/jboutiquehotel/jboutiquehotel_5.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="5">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/jboutiquehotel/jboutiquehotel_6.jpg" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="6">
+                            <img src="assets/img/jboutiquehotel/jboutiquehotel_6.jpg" class="img-fluid thumbnail"
+                                data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="6">
                         </div>
                     </div>
                 </div>
